# RAG-with-deepseek

./: .gitignore  =1.16.1  alembic.ini  dc-dev.yml  public_api.Dockerfile  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 4dd1fdd006f8_create_user_table.py  e5210c0b7ea6_add_user_model.py
app/: database.py  main.py
app/config/: db.py
app/models/: user.py
app/routers/v1/: auth_api.py
src/: main.py
src/config/: db.py  env_vars.py
src/core/: email.py
src/models/: user.py
src/routers/v1/auth/: auth_api.py
