[project]
name = "rag-with-deepseek"
version = "0.1.0"
description = "Implementing RAG with DeepSeek model"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.1",
    "passlib==1.7.4",
    "Jinja2==3.1.4",
    "jose==1.0.0",
    "python-jose==3.3.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "langchain-community>=0.3.23",
    "langchain-core>=0.3.58",
    "langchain-ollama>=0.3.2",
    "passlib==1.7.4",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.4",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.2",
]
